Polish FilterSettings Mobile Layout

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,6 +23,12 @@
       <div class="description">
         Just click on "Get Started" to log in with your spotify account.
       </div>
+      <a class="btn btn-green" href="{{url}}">Get started!</a>
     </div>
   </div>
+</div>
+<div class="footer">
+  <nav>
+    <p>Lennart Becker © {{currentYear}}</p>
+  </nav>
 </div>
