--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -28,15 +28,16 @@
     text-transform: uppercase;
     white-space: normal;
     margin-top: 10px;
+    text-align: center;
 }
 .btn-outline{
-    border: 2px solid #1db954;
+    border: 2px solid white;
     color: #fff;
     background-color: transparent;
 }
 .btn-outline:hover{
-    background-color: #1db954;
-    color: white;
+    background-color: white;
+    color: black;
 }
 .flex-row{
     display: flex;
@@ -80,6 +81,16 @@ h4{
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+.footer {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    background-color: black;
 }
 @media only screen and (max-width:600px) {
     .button-row {
