--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="buttons">
                     <div class="filterButtonDiv">
-                        <a (click)="filterByDate()" class="filterButton">Get Tracks</a>
+                        <a (click)="runFilter()" class="filterButton">Get Tracks</a>
                     </div>
                     <div class="filterButtonDiv" *ngIf="showTracks">
                         <a (click)="createPlaylist()" class="createPlaylistButton">Create Playlist</a>
@@ -31,8 +31,8 @@
                 </div>
                 <div class="extraSettings">
                     <mat-form-field>
-                        <mat-select placeholder="Playlists to ignore" multiple [ngModel]="select">
-                            <mat-option *ngFor="let playlist of playlists" [value]="playlist.id">{{playlist.name}}</mat-option>
+                        <mat-select placeholder="Playlists to ignore" multiple  [(ngModel)]="playlistsToIgnore">
+                            <mat-option *ngFor="let playlist of playlistNames" [value]="playlist.id">{{playlist.name}}</mat-option>
                         </mat-select>
                     </mat-form-field>
 
@@ -63,7 +63,7 @@
                             <div class="main">
                                 <h3 class="title">{{track.track.name}}</h3>
                                 <p class="artist">{{track.track.artists[0].name}}</p>
-                                <p class="album">{{track.album.name}}</p>
+                                <!-- <p class="album">{{track.track.album.name}}</p> -->
                             </div>
                         </div>
                     </div>
