--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -8,35 +8,41 @@
                     Hey {{user}}, please select two Dates to select the tracks from.
                 </h1>
             </div>
-            <div class="filterSettings">
-                <div class="dates">
-                    <div class="dateInput">
-                        <input [matDatepicker]="fromPicker" (click)="fromPicker.open()" [(ngModel)]="from" placeholder="From">
-                        <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
-                        <mat-datepicker #fromPicker></mat-datepicker>
+            <div class="settingsWrap">
+                <div class="filterSettings">
+                    <div class="dates">
+                        <div class="dateInput">
+                            <input [matDatepicker]="fromPicker" (click)="fromPicker.open()" [(ngModel)]="from" placeholder="From">
+                            <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
+                            <mat-datepicker #fromPicker></mat-datepicker>
+                        </div>
+                        <div class="dateInput">
+                            <input matInput [matDatepicker]="toPicker" (click)="toPicker.open()" [(ngModel)]="to" placeholder="To">
+                            <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
+                            <mat-datepicker #toPicker></mat-datepicker>
+                        </div>
                     </div>
-                    <div class="dateInput">
-                        <input matInput [matDatepicker]="toPicker" (click)="toPicker.open()" [(ngModel)]="to" placeholder="To">
-                        <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
-                        <mat-datepicker #toPicker></mat-datepicker>
+                    <div class="buttons">
+                        <div class="filterButtonDiv">
+                            <a (click)="runFilter()" class="filterButton">Get Tracks</a>
+                        </div>
+                        <div class="filterButtonDiv" *ngIf="showTracks">
+                            <a (click)="createPlaylist()" class="createPlaylistButton">Create Playlist</a>
+                        </div>
                     </div>
-                </div>
-                <div class="buttons">
-                    <div class="filterButtonDiv">
-                        <a (click)="runFilter()" class="filterButton">Get Tracks</a>
+                    <div class="extraSettingsToggle" (click)="toggleExtraSettings()">
+                        <i class="fas fa-cog"></i>
                     </div>
-                    <div class="filterButtonDiv" *ngIf="showTracks">
-                        <a (click)="createPlaylist()" class="createPlaylistButton">Create Playlist</a>
-                    </div>
-                </div>
-                <div class="extraSettings">
-                    <mat-form-field>
-                        <mat-select placeholder="Playlists to ignore" multiple  [(ngModel)]="playlistsToIgnore">
-                            <mat-option *ngFor="let playlist of playlistNames" [value]="playlist.id">{{playlist.name}}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
 
                 </div>
+                <div class="extraSettings" *ngIf="extraSettings">
+                        <mat-form-field>
+                            <mat-select placeholder="Playlists to ignore" multiple [(ngModel)]="playlistsToIgnore">
+                                <mat-option *ngFor="let playlist of playlistNames" [value]="playlist.id">{{playlist.name}}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+
+                    </div>
             </div>
         </div>
 
