--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -36,13 +36,12 @@
 
                 </div>
                 <div class="extraSettings" *ngIf="extraSettings">
-                        <mat-form-field>
+                    <div class="ignorePlaylist">
                             <mat-select placeholder="Playlists to ignore" multiple [(ngModel)]="playlistsToIgnore">
                                 <mat-option *ngFor="let playlist of playlistNames" [value]="playlist.id">{{playlist.name}}</mat-option>
                             </mat-select>
-                        </mat-form-field>
-
-                    </div>
+                        </div>
+                </div>
             </div>
         </div>
 
