Change Welcome Text from two dates to timeframe

--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -5,7 +5,7 @@
         <div class="panel">
             <div class="heading" *ngIf="!showTracks">
                 <h1>
-                    Hey {{user}}, please select two Dates to select the tracks from.
+                    Hey {{user}}, please select a timeframe.
                 </h1>
             </div>
             <div class="settingsWrap">
