Add Loading Button when Tracks not loaded, insert text on login page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,7 +21,11 @@
         <p>Select a timespan and discover what you added to your playlists at that time.</p>
       </div>
       <div class="description">
-        Just click on "Get Started" to log in with your spotify account.
+        Rediscovery for Spotify makes it easy for you to relive past memories by creating playlists with the tracks you added during
+        that time. <br><br>
+        Simply select a timeframe and get an instant collection of the songs you added to any of your playlists.<br><br>
+        You could create a playlist with songs from your last vacation, of a special year in your life or anything else you
+        want to get nostalgic about.
       </div>
       <a class="btn btn-green" href="{{url}}">Get started!</a>
     </div>
