--- a/src/app/main-panel/main-panel.component.css
+++ b/src/app/main-panel/main-panel.component.css
@@ -75,7 +75,8 @@ mat-datepicker-toggle {
 .settingsWrap{
   background-color: white;
   border-radius: 10px;
-  margin-top: 3vh;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
 }
 .settingsBox {
   /* margin-left: 2%;
@@ -102,6 +103,7 @@ mat-datepicker-toggle {
   text-transform: uppercase;
   white-space: normal;
   color: white;
+  min-height: 14px;
 }
 .createPlaylistButton{
   background-color: #1db954;
@@ -233,6 +235,7 @@ createPlaylistButtonDiv{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 .dates {
   display: flex;
@@ -302,4 +305,7 @@ createPlaylistButtonDiv{
   100% {
     transform: rotate(360deg);
   }
+}
+.disabled {
+  background-color: grey;
 }
