Change Cards Playlist name Styling,remove ngSelection Package.
Changed Styling from italic to normal, playlist name to bold.

--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -63,7 +63,7 @@
                                     <p>{{track.added_at}}</p>
                                 </div>
                                 <p>Playlist:</p>
-                                <p>{{track.playlist.name}}</p>
+                                <p><b>{{track.playlist.name}}</b></p>
                             </div>
                             <div class="main">
                                 <h3 class="title">{{track.track.name}}</h3>
