--- a/src/app/main-panel/main-panel.component.css
+++ b/src/app/main-panel/main-panel.component.css
@@ -213,8 +213,8 @@ createPlaylistButtonDiv{
 }
 .extra_info p {
   font-size: 15 px;
-  font-weight: 300;
-  font-style: italic;
+  font-weight: 400;
+  font-style: normal;
 }
 .card:hover .extra_info{
   height: 70px;
