Add moment js for the Playlist Card Date Display instead of the timestamp string. Add input verification for createPlaylist function.

--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -60,7 +60,7 @@
                             <div class="extra_info">
                                 <div class="date">
                                     <i class="far fa-calendar-alt"></i>
-                                    <p>{{track.added_at}}</p>
+                                    <p>{{track.added_at| amDateFormat:'MMMM Do YYYY'}}</p>
                                 </div>
                                 <p>Playlist:</p>
                                 <p><b>{{track.playlist.name}}</b></p>
