Bei HTTP Error Redirect zur login Page

--- a/src/app/main-panel/main-panel.component.css
+++ b/src/app/main-panel/main-panel.component.css
@@ -146,7 +146,7 @@ createPlaylistButtonDiv{
 }
 .filteredTracks{
     width: 100%;
-    min-height: 78vh;
+    height: 78vh;
 }
 .card-grid{
     display: grid;
