--- a/src/app/main-panel/main-panel.component.html
+++ b/src/app/main-panel/main-panel.component.html
@@ -47,7 +47,6 @@
                 </div>
             </div>
         </div>
-
         <div class="filteredTracks" *ngIf="showTracks">
             <div class="card-grid">
 
@@ -78,6 +77,11 @@
 
             </div>
 
+        </div>
+        <div class="noTracksFound" *ngIf="showNoTracksMessage">
+            <h1>Sorry, you added no tracks during that time.
+                Maybe try a different one?
+            </h1>
         </div>
     </div>
 </div>
