--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -60,17 +60,25 @@ h4{
 }
 .about{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     background-color: white;
     height: 100vh;
     justify-content: center;
     align-content: center;
     /* border-radius: 20px; */
+
 }
 .right{
     width: 50%;
     color: black;
     padding: 3%;
+}
+.left {
+    width: 50%;
+    background: url('/assets/ Rediscovery for Spotify.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 .heading {
     font-weight: 600;
