--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,6 +29,9 @@
       </div>
       <a class="btn btn-green" href="{{url}}">Get started!</a>
     </div>
+    <div class="left">
+      
+    </div>
   </div>
 </div>
 <div class="footer">
