--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,14 @@ body {
     align-content: center;
     min-height: 100vh;
 } 
+.mat-snack-bar-container {
+    background-color: white;
+    color: #707070;
+    border-radius: 10px!important;
+    display: flex!important;
+    flex-direction: row;
+    justify-content: center;
+}
+.mat-simple-snackbar {
+    font-size: 16px!important;
+}
