Add Anker to 'about' section on login page with Smooth Pagescroll

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,18 +4,17 @@
       <h1>Rediscover songs you loved.</h1>
       <h4>Select a timespan and discover what you added to your playlists at that time.</h4>
       <div class="button-row">
-        <a class="btn btn-outline">
+        <a class="btn btn-outline" pageScroll href="#aboutSection">
           What's this?
         </a>
         <a class="btn btn-green" href="{{url}}">Get started!</a>
       </div>
     </div>
   </div>
-
-
 </div>
+
 <div class="center-container">
-  <div class="about">
+  <div class="about" id="aboutSection">
     <div class="right">
       <div class="heading">
         <p>Select a timespan and discover what you added to your playlists at that time.</p>
