--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -62,7 +62,7 @@ h4{
     display: flex;
     flex-direction: row;
     background-color: white;
-    height: 100vh;
+    height: 92vh;
     justify-content: center;
     align-content: center;
     /* border-radius: 20px; */
@@ -79,10 +79,21 @@ h4{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    justify-items: center;
 }
 .heading {
     font-weight: 600;
     font-size: 27px;
+    margin-bottom: 20px;
+}
+.description {
+    font-size: 20px;
+    margin-bottom: 20px;
 }
 .button-row {
     display: flex;
@@ -91,7 +102,7 @@ h4{
     justify-content: center;
 }
 .footer {
-    height: 50px;
+    height: 8vh;
     width: 100%;
     display: flex;
     flex-direction: row;
