--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,24 +17,26 @@
   <div class="about" id="aboutSection">
     <div class="right">
       <div class="heading">
-        <p>Select a timespan and discover what you added to your playlists at that time.</p>
+        <h2>Select a timespan and discover what you added to your playlists at that time.</h2>
       </div>
       <div class="description">
         Rediscovery for Spotify makes it easy for you to relive past memories by creating playlists with the tracks you added during
-        that time. <br><br>
-        Simply select a timeframe and get an instant collection of the songs you added to any of your playlists.<br><br>
-        You could create a playlist with songs from your last vacation, of a special year in your life or anything else you
-        want to get nostalgic about.
+        that time.
+        <br>
+        <br> Simply select a timeframe and get an instant collection of the songs you added to any of your playlists.
+        <br>
+        <br> You could create a playlist with songs from your last vacation, of a special year in your life or anything else
+        you want to get nostalgic about.
       </div>
       <a class="btn btn-green" href="{{url}}">Get started!</a>
     </div>
     <div class="left">
-      
+
     </div>
   </div>
-</div>
-<div class="footer">
-  <nav>
-    <p>Lennart Becker © {{currentYear}}</p>
-  </nav>
+  <div class="footer">
+    <nav>
+      <p>Lennart Becker © {{currentYear}}</p>
+    </nav>
+  </div>
 </div>
