Add Links to footer in Login Component

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -36,7 +36,8 @@
   </div>
   <div class="footer">
     <nav>
-      <p>Lennart Becker © {{currentYear}}</p>
+      <a href="https://lennart.cc">Lennart Becker © {{currentYear}}</a>
+      <a href="https://github.com/lennartbecker"><img src="/assets/github.png" alt="" class="logo"></a>
     </nav>
   </div>
 </div>
