--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -111,9 +111,26 @@ h4{
     align-items: center;
     background-color: black;
 }
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+nav a {
+    margin-left: 5px;
+    margin-right: 5px;
+    color: white;
+    text-decoration: none;
+}
 @media only screen and (max-width:600px) {
     .button-row {
         display: flex;
         flex-direction: column-reverse;
     }
+}
+.logo {
+    height: 27px;
+    width: auto
 }
