--- a/src/app/main-panel/main-panel.component.css
+++ b/src/app/main-panel/main-panel.component.css
@@ -255,6 +255,12 @@ createPlaylistButtonDiv{
     flex-direction: column;
     align-items: center;
   }
+  .dates {
+    margin:0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around
+  }
   .filteredTracks {
     height: 70vh;
   }
@@ -270,6 +276,7 @@ createPlaylistButtonDiv{
   .settingsWrap {
     margin-top: 40px;
     margin-bottom: 40px;
+    min-width: 90%;
   }
   .card {
     width: 250px;
