Edito Mobile Layout; set filter function query to <= & >=

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -76,7 +76,7 @@ h4{
 }
 .left {
     width: 50%;
-    background: url('/assets/ Rediscovery for Spotify.jpg');
+    background: url('/assets/Screenshot.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
