--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
   <div class="about" id="aboutSection">
     <div class="right">
       <div class="heading">
-        <h2>Select a timespan and discover what you added to your playlists at that time.</h2>
+        <h2>Time travel for your playlists.</h2>
       </div>
       <div class="description">
         Rediscovery for Spotify makes it easy for you to relive past memories by creating playlists with the tracks you added during
