--- a/src/app/main-panel/main-panel.component.css
+++ b/src/app/main-panel/main-panel.component.css
@@ -250,10 +250,18 @@ createPlaylistButtonDiv{
   flex-direction: row;
 
 }
+@media only screen and (max-width:350px) {
+  .settingsWrap {
+    min-width: 90%;
+  }
+}
 @media only screen and (max-width:670px) {
   .filterSettings {
     flex-direction: column;
     align-items: center;
+  }
+  .heading{
+    width: 90%;
   }
   .dates {
     margin:0;
@@ -276,7 +284,6 @@ createPlaylistButtonDiv{
   .settingsWrap {
     margin-top: 40px;
     margin-bottom: 40px;
-    min-width: 90%;
   }
   .card {
     width: 250px;
